--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body{
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     margin: 0;
-    flex: 1;
+    /* flex: 1; */
     
 }
 
@@ -94,6 +94,7 @@ button:hover, a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 100px;
 }
 
 .blocks {
@@ -102,5 +103,24 @@ button:hover, a:hover {
 }
 
 .block {
-    width: 150px;
+    width: 300px;
+}
+
+.cats {
+    width: 300px;
+    height: 250px;
+    overflow: none;
+    border: 5px solid #688C9A;
+    border-radius: 15px;
+    flex-wrap: wrap;
+}
+
+h2 {
+    font-size: 38px;
+    margin-bottom: 50px;
+}
+
+.text {
+    font-size: 18px;
+    color: #404040;
 }
