--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@ body{
     flex-direction: column;
     gap: 120px;
 }
+
+.logo{
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: 800;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -124,6 +131,7 @@ h2 {
 .text {
     font-size: 18px;
     color: #404040;
+    margin-top: 10px;
 }
 
 .container3 {
@@ -160,4 +168,53 @@ h2 {
     font-weight: 800;
 }
 
+.container4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 75px;
+    margin-bottom: 75px;
+}
 
+.action {
+    display: flex;
+    justify-content: space-around;
+    background-color: #3882F6;
+    width: 900px;
+    height: 100px;
+    border-radius: 8px;
+    padding: 25px;
+
+}
+
+.action-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.action-button {
+    align-self: center;
+    border: 2px solid white;
+    width: 130px;
+    height: 35px;
+}
+
+h3 {
+    color: white;
+    font-size: 25px;
+    font-weight: bold;
+    margin: 0;
+}
+
+
+.footer {
+    background-color: #1F2937;
+}
+
+.footer-text{
+    color: white;
+    font-weight: 500;
+    padding: 30px;
+    text-align: center;
+}
